// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cfg_reducer updateCfg 1`] = `
Object {
  "experiments": Object {
    "flags": Object {},
    "metrika": "",
  },
  "lang": "en",
  "mail": "https://mail.yandex.com",
  "osFamily": "MacOs",
  "passport": "https://passport-test.yandex.com",
  "tld": "com",
  "ua": Object {},
}
`;

exports[`cfg_reducer updateCfg 2`] = `
Object {
  "experiments": Object {
    "flags": Object {},
    "metrika": "",
  },
  "lang": "",
  "mail": "",
  "osFamily": "",
  "passport": "",
  "tld": "",
  "ua": Object {},
}
`;

exports[`url_reducer goToPage 1`] = `
Object {
  "hostname": undefined,
  "pathname": "/",
  "query": Object {
    "*": "token",
    "page": 6,
  },
  "token": "token",
}
`;

exports[`url_reducer goToPage 2`] = `
Object {
  "hostname": undefined,
  "pathname": "/",
  "query": Object {
    "*": "token",
    "page": 7,
  },
  "token": "token",
}
`;

exports[`url_reducer updateDoc 1`] = `
Object {
  "*": "token",
  "page": 4,
}
`;

exports[`url_reducer updateDoc 2`] = `
Object {
  "*": "token",
  "page": 1,
}
`;

exports[`url_reducer updateURL 1`] = `
Object {
  "hostname": "my-dv.ya.ru",
  "pathname": "/some/pathname/",
  "query": Object {
    "*": "some token",
    "page": 1,
  },
  "token": "some token",
}
`;

exports[`url_reducer updateURL 2`] = `
Object {
  "hostname": "not-my-dv.ya.com.tr",
  "pathname": "/another/pathname/",
  "query": Object {
    "*": "another token",
    "page": 5,
  },
  "token": "another token",
}
`;

exports[`user_reducer updateUser 1`] = `
Object {
  "accounts": Array [
    Object {
      "avatar": "https://avatars.mdst.yandex.net/get-yapic/0/0-0/islands-middle",
      "id": "4004594257",
      "login": "iegit20",
      "name": "iegit20",
    },
    Object {
      "avatar": "https://avatars.mdst.yandex.net/get-yapic/1/0-0/islands-middle",
      "id": "4004594258",
      "login": "kri0-gen",
      "name": "kri0-gen",
    },
  ],
  "auth": true,
  "id": 42,
}
`;

exports[`user_reducer updateUser 2`] = `
Object {
  "accounts": Array [],
  "auth": false,
  "id": 0,
}
`;
